<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_list_employee">

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.ynov.upwork.ui.stats.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" >


        <action
            android:id="@+id/action_navigation_stats_to_navigation_list_employee2"
            app:destination="@id/navigation_list_employee" />
    </fragment>

    <fragment
        android:id="@+id/navigation_list_employee"
        android:name="com.ynov.upwork.ui.listEmployee.ListEmployeeFragment"
        android:label="@string/list"
        tools:layout="@layout/fragment_list_employee" >

        <action
            android:id="@+id/action_navigation_list_employee_to_navigation_stats"
            app:destination="@id/navigation_stats" />
    </fragment>

    <fragment
        android:id="@+id/navigation_employee"
        android:name="com.ynov.upwork.ui.employee.EmployeeFragment"
        android:label="@string/employee"
        tools:layout="@layout/fragment_employee" >


        <action
            android:id="@+id/action_navigation_employee_to_navigation_stats"
            app:destination="@id/navigation_stats" />
        <action
            android:id="@+id/action_navigation_employee_to_navigation_list_employee"
            app:destination="@id/navigation_list_employee" />
    </fragment>

</navigation>