<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.employee.EmployeeFragment">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            tools:ignore="MissingConstraints">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <ImageView
                    android:id="@+id/arrow"
                    android:clickable="true"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_keyboard_arrow_left_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:layout_marginStart="10dp"
                    android:textSize="30dp"
                    android:textColor="@color/black"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today"
                    android:layout_marginStart="10dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"></TextView>
            </LinearLayout>
            <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            tools:ignore="MissingConstraints">
            <TableRow
                android:id="@+id/row_employee_hours"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">
                <LinearLayout
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gone"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:orientation="vertical"
                    android:background="@drawable/background_list_employee">
                    <TextView
                        android:id="@+id/worked"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/worked"
                        android:textColor="#000000"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gone"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:orientation="vertical"
                    android:background="@drawable/background_list_employee">
                    <TextView
                        android:id="@+id/credit"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/credit"
                        android:textColor="#000000"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gone"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:orientation="vertical"
                    android:background="@drawable/background_list_employee">
                    <TextView
                        android:id="@+id/arrive"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrived"
                        android:textColor="#000000"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:padding="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gone"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:orientation="vertical"
                    android:background="@drawable/background_list_employee">
                    <TextView
                        android:id="@+id/gone"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gone"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resumed"
                    android:layout_marginStart="10dp"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"></TextView>
            </LinearLayout>
            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:background="@drawable/background_scrollview_grey">
                <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:stretchColumns="0,1"
                android:background="@drawable/background_resumed_white"
                tools:ignore="MissingConstraints"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp">
                <TableRow
                    android:id="@+id/row_employee_resume"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">
                    <TextView
                        android:id="@+id/date"
                        android:gravity="start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/hour"
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hour"
                        android:textColor="#000000"
                        android:textSize="16sp"/>

                </TableRow>
            </TableLayout>
            </ScrollView>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>